[gd_scene load_steps=4 format=3 uid="uid://dwmpbi5874ctd"]

[ext_resource type="Script" path="res://Menus/credits_menu.gd" id="2_nd4l7"]
[ext_resource type="Theme" uid="uid://benc2fv0e5te2" path="res://Menus/main_menu.tres" id="2_y6kl4"]

[sub_resource type="LabelSettings" id="LabelSettings_cqcu3"]
font_size = 64
outline_size = 10
outline_color = Color(0, 0, 0, 1)

[node name="CreditsScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("2_nd4l7")
scroll_speed = 100.0

[node name="StartScrollTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.956863, 0.796078, 0.270588, 1)

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_y6kl4")

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
alignment = 1

[node name="ScoreDisplay" type="Label" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(250, 100)
layout_mode = 2
text = "Score is 93i29
dffdsj
fdf"
label_settings = SubResource("LabelSettings_cqcu3")
horizontal_alignment = 1
autowrap_mode = 3

[node name="ScrollContainer" type="Control" parent="MarginContainer/VBoxContainer"]
clip_contents = true
layout_mode = 2
size_flags_vertical = 3

[node name="CreditsContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/ScrollContainer"]
layout_mode = 2
offset_top = 10.06
offset_right = 1088.0
offset_bottom = 815.27
size_flags_horizontal = 3
size_flags_vertical = 8

[node name="ButtonContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 8
theme = ExtResource("2_y6kl4")

[node name="Back" type="Button" parent="MarginContainer/VBoxContainer/ButtonContainer"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 4
text = "Exit
"

[connection signal="timeout" from="StartScrollTimer" to="." method="_on_start_scroll_timer_timeout"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/ButtonContainer/Back" to="." method="_on_back_pressed"]
